--- a/Lab_8.ipynb
+++ b/Lab_8.ipynb
@@ -2,6 +2,10 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "hpmKGS3RWsii",
+      "metadata": {
+        "id": "hpmKGS3RWsii"
+      },
       "source": [
         "## 🎬 IMDB Movie Review Sentiment Dataset\n",
         "\n",
@@ -29,14 +33,16 @@
         "  ```python\n",
         "  from tensorflow.keras.datasets import imdb\n",
         "  (X_train, y_train), (X_test, y_test) = imdb.load_data(num_words=10000)"
-      ],
-      "metadata": {
-        "id": "hpmKGS3RWsii"
-      },
-      "id": "hpmKGS3RWsii"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "WlJ1hpLeRuZh",
+      "metadata": {
+        "id": "WlJ1hpLeRuZh"
+      },
+      "outputs": [],
       "source": [
         "\n",
         "# If needed:\n",
@@ -102,40 +108,40 @@
         "\n",
         "X_train_text, y_train, X_test_text, y_test = data\n",
         "len(X_train_text), len(X_test_text), np.bincount(y_train), np.bincount(y_test)\n"
-      ],
-      "metadata": {
-        "id": "WlJ1hpLeRuZh"
-      },
-      "id": "WlJ1hpLeRuZh",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(X_train_text[0][:100])"
-      ],
+      "execution_count": null,
+      "id": "UPdexDMPWS69",
       "metadata": {
         "id": "UPdexDMPWS69"
       },
-      "id": "UPdexDMPWS69",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(X_train_text[0][:100])"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(np.unique(y_train))"
-      ],
+      "execution_count": null,
+      "id": "GngfwaDoWLTx",
       "metadata": {
         "id": "GngfwaDoWLTx"
       },
-      "id": "GngfwaDoWLTx",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(np.unique(y_train))"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "8ntem9MOf8dx",
+      "metadata": {
+        "id": "8ntem9MOf8dx"
+      },
+      "outputs": [],
       "source": [
         "# Get the unique values and their counts\n",
         "unique_values, counts = np.unique(y_test, return_counts=True)\n",
@@ -146,16 +152,16 @@
         "print(f\"Unique values: {y_test}\")\n",
         "print(f\"Counts of unique values: {counts}\")\n",
         "print(f\"Number of unique values: {num_unique_values}\")"
-      ],
-      "metadata": {
-        "id": "8ntem9MOf8dx"
-      },
-      "id": "8ntem9MOf8dx",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "H5XNb0bBR6Y-",
+      "metadata": {
+        "id": "H5XNb0bBR6Y-"
+      },
+      "outputs": [],
       "source": [
         "\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -170,13 +176,7 @@
         "    min_df=2\n",
         ")\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "H5XNb0bBR6Y-"
-      },
-      "id": "H5XNb0bBR6Y-",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -279,8 +279,8 @@
         "        # ------------------------------------------------\n",
         "        # TODO Refer to the Linear SVM hinge objective defined in the cell above (Exercise 1)\n",
         "        # ------------------------------------------------\n",
-        "        margins = 1.0 - ypm1 * ( @ self.w_ + )\n",
-        "        return 0.5*np.dot(self.w_, ) + * np.maximum(0.0, margins).sum()\n",
+        "        margins = 1.0 - ypm1 * (X @ self.w_ + self.b_)\n",
+        "        return 0.5 * np.dot(self.w_, self.w_) + self.C * np.maximum(0.0, margins).sum()\n",
         "        # ----------------------------\n",
         "        # Implementation Ends Here\n",
         "        # ----------------------------\n",
@@ -306,7 +306,7 @@
         "                # ------------------------------------------------\n",
         "                # TODO Refer to the Subgradient updates (per sample) with margin equation in the cell above (Exercise 2)\n",
         "                # ------------------------------------------------\n",
-        "                margin = yi * (np.dot(self., ) + self.b_)\n",
+        "                margin = yi * (np.dot(self.w_, xi) + self.b_)\n",
         "                # ----------------------------\n",
         "                # Implementation Ends Here\n",
         "                # ----------------------------\n",
@@ -332,23 +332,11 @@
         "        return self\n",
         "\n",
         "    def decision_function(self, X):\n",
-        "        # ------------------------------------------------\n",
-        "        # TODO Refer to the linear decision function equation in the cell above (Exercise 3)\n",
-        "        # ------------------------------------------------\n",
-        "        return X @  +\n",
-        "        # ----------------------------\n",
-        "        # Implementation Ends Here\n",
-        "        # ----------------------------\n",
+        "      return X @ self.w_ + self.b_\n",
         "\n",
         "    def predict(self, X):\n",
-        "        # ------------------------------------------------\n",
-        "        # TODO We want to utilize the decision_function we defined in LinearSVMScratch. (Exercise 4)\n",
-        "        # ------------------------------------------------\n",
-        "        s = self.\n",
-        "        # ----------------------------\n",
-        "        # Implementation Ends Here\n",
-        "        # ----------------------------\n",
-        "        return (s >= 0.0).astype(int)\n",
+        "      s = self.decision_function(X)\n",
+        "      return (s >= 0.0).astype(int)\n",
         "\n",
         "# ---------------- Pipeline: TF-IDF -> SVD(200) -> Scaler ----------------\n",
         "vectorizer = TfidfVectorizer(stop_words='english', max_features=60000, ngram_range=(1,2), min_df=2)\n",
@@ -386,6 +374,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "WBE5RMfOdIv5",
+      "metadata": {
+        "id": "WBE5RMfOdIv5"
+      },
+      "outputs": [],
       "source": [
         "svm = LinearSVMScratch(C=1.0, lr=lr_val, n_epochs=10, lr_decay=0.02, early_stopping=True, es_patience=2, random_state=7)\n",
         "svm.fit(Xtr, y_train)\n",
@@ -402,44 +396,34 @@
         "plt.xlabel(\"Epoch\")\n",
         "plt.ylabel(\"Loss\")\n",
         "plt.show()\n"
-      ],
-      "metadata": {
-        "id": "WBE5RMfOdIv5"
-      },
-      "id": "WBE5RMfOdIv5",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "WmqcneLdtTA8",
+      "metadata": {
+        "id": "WmqcneLdtTA8"
+      },
+      "outputs": [],
       "source": [
         "from sklearn import svm\n",
         "from sklearn.metrics import accuracy_score\n",
         "\n",
+        "lin = svm.LinearSVC(C=1, max_iter=2000, dual=True, random_state=7)\n",
+        "lin.fit(Xtr, y_train)\n",
+        "pred_lin = lin.predict(Xte)\n",
         "\n",
-        "# ------------------------------------------------\n",
-        "# TODO We will be utilizing the LinearSVC from sklearn, we will use a C=1, max_iter=2000, dual=True and random_state=7 (Exercise 5)\n",
-        "# First we will train on our data Xtr\n",
-        "# After we want to do predictions on the test data\n",
-        "# ------------------------------------------------\n",
-        "lin =\n",
-        "lin.\n",
-        "pred_lin = lin.\n",
-        "# ----------------------------\n",
-        "# Implementation Ends Here\n",
-        "# ----------------------------\n",
         "\n",
-        "print(\"LinearSVC — test accuracy:\", accuracy_score(y_test, pred_lin))"
-      ],
-      "metadata": {
-        "id": "WmqcneLdtTA8"
-      },
-      "id": "WmqcneLdtTA8",
-      "execution_count": null,
-      "outputs": []
+        "print(\"LinearSVC — test accuracy:\", accuracy_score(y_test, pred_lin))\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "PqtSuCst2y1w",
+      "metadata": {
+        "id": "PqtSuCst2y1w"
+      },
       "source": [
         "## 🧠 Mathematical Foundations of the Polynomial Kernel SVM\n",
         "\n",
@@ -555,14 +539,16 @@
         "This is a smooth, differentiable version of the kernel SVM objective that can be solved by gradient descent without SMO or quadratic programming.\n",
         "\n",
         "---\n"
-      ],
-      "metadata": {
-        "id": "PqtSuCst2y1w"
-      },
-      "id": "PqtSuCst2y1w"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "uLr18w6PULey",
+      "metadata": {
+        "id": "uLr18w6PULey"
+      },
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
@@ -596,15 +582,9 @@
         "        self.X = None; self.beta = None; self.b = 0.0; self.K = None\n",
         "\n",
         "    def _poly_kernel(self, X, Z):\n",
-        "        X = np.asarray(X, dtype=float); Z = np.asarray(Z, dtype=float)\n",
-        "        g = self.gamma if self.gamma is not None else 1.0 / X.shape[1]\n",
-        "        # ------------------------------------------------\n",
-        "        # TODO Refer to the Polynomial Kernel section in the cell above (Exercise 6)\n",
-        "        # ------------------------------------------------\n",
-        "        return ( * ( @ Z.T) + self.coef0) ** self.\n",
-        "        # ----------------------------\n",
-        "        # Implementation Ends Here\n",
-        "        # ----------------------------\n",
+        "      X = np.asarray(X, dtype=float); Z = np.asarray(Z, dtype=float)\n",
+        "      g = self.gamma if self.gamma is not None else 1.0 / X.shape[1]\n",
+        "      return (g * (X @ Z.T) + self.coef0) ** self.degree\n",
         "\n",
         "    def fit(self, X, y):\n",
         "        X = np.asarray(X, dtype=float)\n",
@@ -612,27 +592,14 @@
         "        assert set(np.unique(y)).issubset({-1.0, 1.0}), \"Labels must be {-1,+1}\"\n",
         "        n = X.shape[0]\n",
         "        self.X = X\n",
-        "        # ------------------------------------------------\n",
-        "        # TODO Refer to the Polynomial Kernel section in the cell above (Exercise 7)\n",
-        "        # Hint we might use X twice (since we are building the training kernel matrix between every pair of training samples)\n",
-        "        # ------------------------------------------------\n",
-        "        self.K = self._poly_kernel(X, )\n",
-        "        # ----------------------------\n",
-        "        # Implementation Ends Here\n",
-        "        # ----------------------------\n",
+        "        self.K = self._poly_kernel(X, X)\n",
         "        self.beta = np.zeros(n); self.b = 0.0\n",
         "\n",
         "        m_beta = np.zeros_like(self.beta); v_beta = np.zeros_like(self.beta)\n",
         "        m_b = 0.0; v_b = 0.0\n",
         "\n",
         "        for t in range(1, self.epochs + 1):\n",
-        "            # ------------------------------------------------\n",
-        "            #TODO Refer to the decision function defined in the 1) Problem Setup in the cell above (Exercise 8)\n",
-        "            # ------------------------------------------------\n",
-        "            f = self.K @ self. + self.b\n",
-        "            # ----------------------------\n",
-        "            # Implementation Ends Here\n",
-        "            # ----------------------------\n",
+        "            f = self.K @ self.beta + self.b\n",
         "            margin = y * f\n",
         "            r = np.clip(1.0 - margin, 0.0, None)\n",
         "\n",
@@ -660,13 +627,7 @@
         "\n",
         "    def decision_function(self, Xq):\n",
         "        Kq = self._poly_kernel(np.asarray(Xq, dtype=float), self.X)\n",
-        "        # ------------------------------------------------\n",
-        "        #TODO Refer to the decision function after training section defined in the cell above (Exercise 9)\n",
-        "        # ------------------------------------------------\n",
-        "        return  @ self.beta + self.b\n",
-        "        # ----------------------------\n",
-        "        # Implementation Ends Here\n",
-        "        # ----------------------------\n",
+        "        return Kq @ self.beta + self.b\n",
         "\n",
         "    def predict(self, Xq):\n",
         "        return np.where(self.decision_function(Xq) >= 0.0, 1.0, -1.0)\n",
@@ -732,15 +693,8 @@
         "C = lambda_to_C(LAM, n=X_tr.shape[0])\n",
         "t1 = time()\n",
         "\n",
-        "# ------------------------------------------------\n",
-        "# TODO We will be utilizing the SVC from sklearn (sklearn.svm.SVC), we will use a kernel=\"poly\", degree=DEGREE, gamma=GAMMA, coef0=COEF0, C=C (Exercise 10)\n",
-        "# We will train on the X_tr data and y_tr, remember sklearn expects y_tr to be {0,1}\n",
-        "# ------------------------------------------------\n",
-        "sk =\n",
-        "sk.fit(, )  # sklearn expects {0,1}\n",
-        "# ----------------------------\n",
-        "# Implementation Ends Here\n",
-        "# ----------------------------\n",
+        "sk = SVC(kernel=\"poly\", degree=DEGREE, gamma=GAMMA, coef0=COEF0, C=C, random_state=RS)\n",
+        "sk.fit(X_tr, (y_tr > 0).astype(int))\n",
         "t_sk = time() - t1\n",
         "\n",
         "# ------------------- Evaluate ------------------- #\n",
@@ -777,16 +731,14 @@
         "    [f\"Custom Poly SVM (λ={LAM})\", f\"sklearn SVC (C≈{C:.2g})\"],\n",
         "    X_tr, y_tr\n",
         ")\n"
-      ],
-      "metadata": {
-        "id": "uLr18w6PULey"
-      },
-      "id": "uLr18w6PULey",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "87m-wA1qlsAI",
+      "metadata": {
+        "id": "87m-wA1qlsAI"
+      },
       "source": [
         "# **Questions and Answers** (10 points)\n",
         "\n",
@@ -796,45 +748,41 @@
         "\n",
         "What role does the regularization parameter (C) play in a Linear SVM?\n",
         "\n",
-        "**Answer:**\n",
+        "**Answer:** If C is Large, then the model penalizes misclassifications heavily, trying to correctly classify every training point. If C is small, it allows more margin violations, emphasizing a wider margin.\n",
         "\n",
         "### **2. Linear SVM's**\n",
         "\n",
         "Why are Linear SVMs typically preferred for high-dimensional, sparse datasets (like TF-IDF text features)?\n",
         "\n",
-        "**Answer:**\n",
+        "**Answer:** Linear SVMs are preferred for text and other high-dimensional, sparse datasets because of efficiency, regularization, and interpretability.\n",
         "\n",
         "### **3. Polynomial SVM's**\n",
         "How do the parameters degree (d), gamma (G), and coef0 (c₀) influence the decision boundary?\n",
         "\n",
-        "**Answer:**\n",
+        "**Answer:** Each parameter shapes the nonlinear decision boundary formed by the polynomial kernel. Degree controls parameter order, Gamma scales the dot product, and Coef0 adds a constant to change lower-order terms.\n",
         "\n",
         "### **4. Overfitting Polynomial SVM**\n",
         "Why might a Polynomial SVM overfit more easily than a Linear SVM?\n",
         "\n",
-        "**Answer:**\n",
+        "**Answer:** Increasing the degree d expands the feature space, and a bad c can make kernels too sensitive to specific samples.\n",
         "\n",
         "### **5. Polynomial Kernel Purpose**\n",
         "Why does a Polynomial kernel make linear classifiers capable of separating nonlinear data?\n",
         "\n",
-        "**Answer:**"
-      ],
-      "metadata": {
-        "id": "87m-wA1qlsAI"
-      },
-      "id": "87m-wA1qlsAI"
+        "**Answer:** The polynomial kernel enables the classifier to behave nonlinearly by mapping the input vectors into a higher-dimensional polynomial feature space."
+      ]
     }
   ],
   "metadata": {
-    "language_info": {
-      "name": "python"
-    },
     "colab": {
       "provenance": []
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
     }
   },
   "nbformat": 4,
